--- a/app/src/main/res/layout/acitivity_plogin.xml
+++ b/app/src/main/res/layout/acitivity_plogin.xml
@@ -41,7 +41,7 @@
         android:layout_below="@+id/btn_login"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:text="Not Registered? Signup Here!" />
+        android:text="Not Registered? Sign Up Here!" />
 
     <EditText
         android:id="@+id/editTextPPassword"
