--- a/app/src/main/res/layout/activity_patient_bookings.xml
+++ b/app/src/main/res/layout/activity_patient_bookings.xml
@@ -23,13 +23,15 @@
 
 
         <!-- Recycler view Object, this will allow for the user to scroll through a list of items -->
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="2dp"
             android:layout_below="@+id/titleText"
+            android:layout_marginTop="7dp"
             android:background="@drawable/border_set_patient_list"
+            android:padding="2dp"
             android:scrollbars="vertical" />
 
         <TextView
