------CHANGES-------- Calendar UI Overhaul RecylerView Lists Overhaul Minor UI Tweaks

--- a/app/src/main/res/layout/activity_d_patient_list.xml
+++ b/app/src/main/res/layout/activity_d_patient_list.xml
@@ -13,22 +13,10 @@
 
         <!-- Recycler view Object, this will allow for the user to scroll through a list of items -->
 
-        <TextView
-            android:id="@+id/titleText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="Patient List"
-            android:textAlignment="center"
-            android:textColor="@android:color/black"
-            android:textSize="36dp"
-            android:textStyle="bold" />
-
         <LinearLayout
             android:id="@+id/pdl_searchbar_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/titleText"
             android:background="#25ff5d52"
             android:divider="@drawable/border_set_patient_list"
             android:orientation="horizontal">
@@ -60,10 +48,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="648dp"
+            android:layout_height="match_parent"
             android:layout_below="@+id/pdl_searchbar_container"
-            android:background="@drawable/border_set_patient_list"
-            android:padding="2dp"
             android:scrollbars="vertical" />
 
         <TextView
