--- a/app/src/main/res/layout/activity_d_home_page.xml
+++ b/app/src/main/res/layout/activity_d_home_page.xml
@@ -27,10 +27,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/datePicker"
-            android:background="@drawable/rectangle_border"
             android:footerDividersEnabled="false"
+            android:groupIndicator="@color/cardview_light_background">
 
-            ></ExpandableListView>
+        </ExpandableListView>
 
     </RelativeLayout>
 
