--- a/app/src/main/res/layout/activity_doc_type_list.xml
+++ b/app/src/main/res/layout/activity_doc_type_list.xml
@@ -10,8 +10,17 @@
     <TextView
         android:id="@+id/dt"
         android:layout_width="match_parent"
+        android:layout_centerHorizontal="true"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:background="@drawable/border_set_patient_list"
+        android:elevation="4dp"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
+        android:textStyle="normal"
+        android:fontFamily="sans-serif-medium"
+        android:text="Hello"
         android:textAlignment="center"
         android:gravity="center_horizontal"
         android:textSize="36dp"
