--- a/app/src/main/res/layout/activity_doctor_consultation_list.xml
+++ b/app/src/main/res/layout/activity_doctor_consultation_list.xml
@@ -4,22 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DoctorConsultationList">
+    tools:context=".DoctorConsultationList"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/titleText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Past Consults"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:gravity="center_horizontal"
-            android:textSize="36dp"
-            android:textColor="@android:color/black"/>
 
 
         <!-- Recycler view Object, this will allow for the user to scroll through a list of items -->
@@ -28,7 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="2dp"
-            android:layout_below="@+id/titleText"
             android:background="@drawable/border_set_patient_list"
             android:scrollbars="vertical" />
 
