--- a/app/src/main/res/layout/appt_item.xml
+++ b/app/src/main/res/layout/appt_item.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="MissingClass"
-    >
+    app:cardElevation="0dp">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="0dp"
-        android:background="@drawable/border_set_patient_list">
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:paddingLeft="12dp"
+        android:background="@drawable/border_set_patient_list1"
+        android:elevation="4dp">
 
         <!-- This is where the doctor name will be -->
         <TextView
@@ -22,7 +28,8 @@
             android:textSize="26sp"
             android:textStyle="bold"
             android:layout_alignParentTop="true"
-            android:id="@+id/nameText"/>
+            android:id="@+id/nameText"
+            android:layout_marginTop="8dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,33 +37,35 @@
             android:layout_alignParentRight="true"
             android:text="Statusy"
             android:textSize="22sp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="12dp"
             android:textStyle="bold"
             android:id="@+id/statusText"
             android:gravity="center"
             android:background="@drawable/rounded_corner_pending"
-            android:textColor="#f00"/>
+            android:textColor="#f00" />
 
         <TextView
             android:id="@+id/dateText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/nameText"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginTop="32dp"
             android:text="date"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_marginBottom="8dp"/>
 
         <TextView
             android:id="@+id/timeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/dateText"
+            android:layout_below="@id/nameText"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:text="time"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_marginTop="32dp"
+            android:layout_alignRight="@+id/statusText" />
 
     </RelativeLayout>
 
