--- a/app/src/main/res/layout/doc_type_list_item.xml
+++ b/app/src/main/res/layout/doc_type_list_item.xml
@@ -4,13 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:ignore="MissingClass">
+    tools:ignore="MissingClass"
+    android:background="#FFFFFF"
+    app:cardElevation="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="0dp"
-        android:background="@drawable/border_set_patient_list">
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:paddingLeft="12dp"
+        android:background="@drawable/border_set_patient_list2"
+        android:elevation="3dp">
 
         <!-- This is where the Patient name will be -->
         <TextView
@@ -20,8 +27,20 @@
             android:textColor="@android:color/black"
             android:textSize="26sp"
             android:textStyle="bold"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:layout_alignParentTop="true"
             android:id="@+id/dateText"/>
+
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@drawable/ic_baseline_keyboard_arrow_right_24"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_centerVertical="true"/>
+
+
 
         <!--  <TextView
               android:layout_width="wrap_content"
@@ -34,5 +53,13 @@
               android:id="@+id/idText"/> -->
 
     </RelativeLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_baseline_play_arrow_24"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="3dp"
+        android:elevation="3dp"/>
 
 </androidx.cardview.widget.CardView>
