--- a/app/src/main/res/layout/doclist_item.xml
+++ b/app/src/main/res/layout/doclist_item.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="MissingClass"
-    >
+    app:cardElevation="0dp">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="0dp"
-        android:background="@drawable/border_set_patient_list">
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:background="@drawable/border_set_patient_list1"
+        android:paddingLeft="12dp"
+        android:elevation="4dp">
 
         <!-- This is where the doctor name will be -->
         <TextView
@@ -22,7 +28,8 @@
             android:textSize="26sp"
             android:textStyle="bold"
             android:layout_alignParentTop="true"
-            android:id="@+id/symptomsText"/>
+            android:id="@+id/symptomsText"
+            android:layout_marginTop="8dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -43,10 +50,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/symptomsText"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginTop="24dp"
             android:text="date"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_marginBottom="8dp"/>
 
 
 
