Loading Dialog changed and needs to be added to correct places.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="gradStop">#000000</color>
     <color name="your_color">#e75748</color>
     <color name="grey">#808080</color>
+    <color name="color1">#FF5758</color>
 </resources>
