--- a/app/src/main/res/layout/activity_doctor_consultation_list.xml
+++ b/app/src/main/res/layout/activity_doctor_consultation_list.xml
@@ -13,14 +13,30 @@
 
 
         <!-- Recycler view Object, this will allow for the user to scroll through a list of items -->
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="2dp"
             android:background="@drawable/border_set_patient_list"
+            android:padding="2dp"
             android:scrollbars="vertical" />
 
+        <TextView
+            android:id="@+id/dcl_noitems"
+            android:layout_width="match_parent"
+            android:layout_height="106dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="50dp"
+            android:gravity="center"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp"
+            android:text="You have no past consults with this patient."
+            android:textSize="26sp" />
 
 
     </RelativeLayout>
