--- a/app/src/main/res/layout/check.xml
+++ b/app/src/main/res/layout/check.xml
@@ -29,16 +29,9 @@
                 android:orientation="vertical"
                 tools:ignore="MissingConstraints">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="RedBox"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textStyle="bold" />
-
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="99dp"
+                    android:layout_height="match_parent"
                     android:paddingBottom="40dp"
                     android:src="@mipmap/ic_launcher" />
 
@@ -475,6 +468,18 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/backButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginRight="40dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_arrow"
+                tools:ignore="VectorDrawableCompat" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
