--- a/app/src/main/res/layout/check.xml
+++ b/app/src/main/res/layout/check.xml
@@ -27,16 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                tools:ignore="MissingConstraints">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingBottom="40dp"
-                    android:src="@mipmap/ic_launcher" />
-
-
-            </LinearLayout>
+                tools:ignore="MissingConstraints" />
 
 
             <LinearLayout
@@ -44,14 +35,14 @@
                 android:layout_width="237dp"
 
                 android:layout_height="79dp"
-                android:layout_marginTop="72dp"
+                android:layout_marginTop="48dp"
                 android:layout_marginEnd="16dp"
 
-                android:layout_marginRight="16dp"
+                android:layout_marginRight="10dp"
                 android:orientation="vertical"
                 android:padding="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.706"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/linearLayout3"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -138,9 +129,9 @@
                 android:id="@+id/linearLayout4"
                 android:layout_width="380dp"
                 android:layout_height="146dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginLeft="16dp"
                 android:background="@drawable/border"
                 android:orientation="vertical"
                 android:padding="15dp"
@@ -269,9 +260,9 @@
                 android:id="@+id/radioGroup4"
                 android:layout_width="314dp"
                 android:layout_height="35dp"
-                android:layout_marginRight="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -282,36 +273,36 @@
                     android:id="@+id/radioButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:clickable="false"
-                    android:checked="false"
                     android:buttonTint="#B71C1C"
+                    android:checked="false"
+                    android:clickable="false"
                     android:text="Acute" />
 
                 <RadioButton
                     android:id="@+id/radioButton2"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:clickable="false"
-                    android:checked="false"
                     android:buttonTint="#B71C1C"
+                    android:checked="false"
+                    android:clickable="false"
                     android:text="Chronic" />
 
                 <RadioButton
                     android:id="@+id/radioButton3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:clickable="false"
-                    android:checked="false"
                     android:buttonTint="#B71C1C"
+                    android:checked="false"
+                    android:clickable="false"
                     android:text="Existing" />
 
                 <RadioButton
                     android:id="@+id/radioButton4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:clickable="false"
-                    android:checked="false"
                     android:buttonTint="#B71C1C"
+                    android:checked="false"
+                    android:clickable="false"
                     android:text="Injury" />
             </RadioGroup>
 
@@ -320,9 +311,9 @@
                 android:id="@+id/linearLayout5"
                 android:layout_width="390dp"
                 android:layout_height="119dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginLeft="16dp"
                 android:background="@drawable/border"
                 android:orientation="vertical"
                 android:padding="15dp"
@@ -351,10 +342,10 @@
 
                     <TextView
                         android:id="@+id/txtDiagnosis"
-                        android:inputType="textMultiLine"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
+                        android:inputType="textMultiLine"
                         android:textColor="@android:color/black"
                         android:textSize="15sp" />
 
@@ -469,16 +460,19 @@
 
             </LinearLayout>
 
-            <ImageButton
-                android:id="@+id/backButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="40dp"
-                android:layout_marginRight="40dp"
-                app:layout_constraintEnd_toEndOf="parent"
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="101dp"
+                android:layout_height="88dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginLeft="28dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView3"
+                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_arrow"
+                app:layout_constraintVertical_bias="0.595"
+                app:srcCompat="@mipmap/ic_launcher_round"
                 tools:ignore="VectorDrawableCompat" />
 
 
